<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_ecran_quizz"
    tools:context="bichet.mb2.quiutzz.EcranQuizz"
    android:id="@+id/quiz_layout">


    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:ems="9"
        android:inputType="textPersonName"
        android:text="@string/question"
        android:textSize="20dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="98dp"
        android:layout_marginLeft="-50dp"
        android:text="@string/rep1"
        android:onClick="Actu"
         />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignTop="@+id/button"
        android:layout_marginRight="-50dp"
        android:text="@string/rep2"
         />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/button"
        android:layout_marginTop="10dp"
        android:text="@string/rep3"
         />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignTop="@+id/button3"
        android:text="@string/rep4"
        />
</RelativeLayout>
